210822 - update products list

--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -195,7 +195,7 @@
                             <li class="list-group-item">Catégorie d'établissement : Siège et établissement principal</li>
                         </ul>
                         <div class="card-body">
-                            <button type="button" class="btn btn-sm btn-primary" ng-click="ShowHide()">Show product</button>
+                            <button type="button" class="btn btn-sm btn-primary" ng-click="ShowProduct(commerce)">Show product</button>
                             <button type="button" ng-click="delCommerce(commerce)" class="btn btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Delete</button>
                         </div>
                     </div>
