--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -1,4 +1,4 @@
-<div class="row site">
+<div class="row site" ng-controller="HeaderController">
     <div class="col-md-1 general_menu inner">
       <a href="#" class="avatar" ng-show="isAuthenticated">
           <%= image_tag "no_ava.png" %>
@@ -181,7 +181,8 @@
         <div class="container-fluid" ng-hide = "IsVisible">
             <!--div class="row"-->
             <h5 class="cat">Shop List</h5> 
-            <a id='backColor' href="#" class="badge text-uppercase" ng-click="AddCommerce()">Add new shop</a>
+            <a id='AddbackColor' href="#" class="badge text-uppercase" ng-click="AddCommerce()">Add shop</a>
+            <a id='RemovebackColor' href="#" class="badge text-uppercase" ng-click="RemoveCommerce()">Remove shop</a>
             <div ng-repeat="commerce in commerces">
                 <div class="col-md-4">
                     <div class="card">
@@ -202,12 +203,12 @@
                     </div>
                 </div>
             </div>
-            <div ng-repeat="newcommerce in nbnew_commerce">
+            <div ng-if="nb_new_commerce > 0" ng-repeat="row in new_commerce">
                 <div class="col-md-4">
                     <div class="card">
                         <%= image_tag "ava1.png", class:"card-img-top" %>
                         <div class="card-body">
-                            <h5 class="card-title">xxxxxx</h5>
+                            <h5 class="card-title">{{row.name}}</h5>
                             <p class="card-text">Commerce localisé à l'adresse xxxxxx dans la ville de yyyy</p>
                         </div>
                         <ul class="list-group list-group-flush">
@@ -216,7 +217,7 @@
                             <li class="list-group-item">Catégorie d'établissement : Siège et établissement principal</li>
                         </ul>
                         <div class="card-body">
-                            <button type="button" ng-click="CreateCommerce(commerce)" class="btn-success btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Create</button>
+                            <button type="button" ng-click="CreateCommerce()" class="btn-success btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Create</button>
                         </div>
                     </div>
                 </div>
