--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -182,7 +182,7 @@
             <!--div class="row"-->
             <h5 class="cat">Shop List</h5> 
             <a id='AddbackColor' href="#" class="badge text-uppercase" ng-click="AddCommerce()">Add shop</a>
-            <a id='RemovebackColor' href="#" class="badge text-uppercase" ng-click="RemoveCommerce()">Remove shop</a>
+            <a ng-if="nb_new_commerce > 0" id='RemovebackColor' href="#" class="badge text-uppercase" ng-click="RemoveCommerce()">Remove shop</a>
             <div ng-repeat="commerce in commerces">
                 <div class="col-md-4">
                     <div class="card">
@@ -204,23 +204,28 @@
                 </div>
             </div>
             <div ng-if="nb_new_commerce > 0" ng-repeat="row in new_commerce">
-                <div class="col-md-4">
-                    <div class="card">
-                        <%= image_tag "ava1.png", class:"card-img-top" %>
-                        <div class="card-body">
-                            <h5 class="card-title">{{row.name}}</h5>
-                            <p class="card-text">Commerce localisé à l'adresse xxxxxx dans la ville de yyyy</p>
-                        </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Siren : 999 999 999 99999</li>
-                            <li class="list-group-item">Etat : Actif depuis le 20/09/2017</li>
-                            <li class="list-group-item">Catégorie d'établissement : Siège et établissement principal</li>
-                        </ul>
-                        <div class="card-body">
-                            <button type="button" ng-click="CreateCommerce()" class="btn-success btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Create</button>
+                <form>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <%= image_tag "ava1.png", class:"card-img-top" %>
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <input type="text" name="" required="" ng-model="row.name" placeholder="Name">
+                                </h5>
+                                <p class="card-text">
+                                    <input type="text" name="" required="" ng-model="row.address1" placeholder="Address"> 
+                                    <input type="text" name="" required="" ng-model="row.city" placeholder="City"> 
+                                    <input type="number" name="" required="" ng-model="row.zipcode" placeholder="Zipcode"> 
+                                    <input type="text" name="" required="" ng-model="row.state" placeholder="State"> 
+                                    <input type="country" name="" required="" ng-model="row.country" placeholder="Country"> 
+                                </p>
+                            </div>
+                            <div class="card-body">
+                                <button type="button" ng-click="CreateCommerce(row)" class="btn-success btn-sm btn-outline-primary text-uppercase"> <i class="fas fa-trash-alt"></i> Create</button>
+                            </div>
                         </div>
                     </div>
-                </div>
+                </form>
             </div>
             <!--/div -->
         </div>
