--- a/app/assets/partials/controllers/MainController.js.erb
+++ b/app/assets/partials/controllers/MainController.js.erb
@@ -17,7 +17,7 @@ module.controller('MainController', [
     '$geolocation',
     'myPosition',
     'myCoordinates', 
-    'markers', 
+    'myMarkers', 
     'boutiques',
     'myBoutiques',
     'myCommercenear',
@@ -30,7 +30,7 @@ module.controller('MainController', [
     'GetUserCommerces',
     'GetUserAddresses',
     'GetAllUser',
-    function($q, $scope, $compile, $window,  $uibModal, $log, $http, nemSimpleLogger, leafletData, coordinates, $geolocation, myPosition, myCoordinates, markers, boutiques, myBoutiques, myCommercenear, SearchCommerce, GetAllCommerce, $route, $routeParams, Auth, ngCart, GetUserCommerces, GetUserAddresses, GetAllUser, UpdateOrderDetails) {
+    function($q, $scope, $compile, $window,  $uibModal, $log, $http, nemSimpleLogger, leafletData, coordinates, $geolocation, myPosition, myCoordinates, myMarkers, boutiques, myBoutiques, myCommercenear, SearchCommerce, GetAllCommerce, $route, $routeParams, Auth, ngCart, GetUserCommerces, GetUserAddresses, GetAllUser, UpdateOrderDetails) {
 
         ngCart.setTaxRate(7.5);
         ngCart.setShipping(2.99);
@@ -352,7 +352,7 @@ module.controller('MainController', [
                     //            B U Y E R   B L O C                   *
                     //--------------------------------------------------*
                         // L'utilisateur a un rôle d'acheteur
-                        // Vérification en base de la présence de commerce en fonction des coordonnées géo
+                        // Vérification en base de la présence de commerces à proximité en fonction des coordonnées géo
                         myCommercenear.Getcommercenear(resultcoord.lat, resultcoord.lng).then(function (commerces) {
                             //var result = angular.equals({}, commerces);
                             // Si on ne trouve aucun commerce en base, extraction des données Mapquest
@@ -362,10 +362,10 @@ module.controller('MainController', [
                                 let nb_commerce = commerce.length;
                                 if (nb_commerce === 0) {
                                     var list_commerce = 15
-                                    console.log("pas de boutiques enregistrées à proximité de chez vous")
-                                    console.log("MainController --> list_commerce : ", list_commerce)
-                                    console.log("MainController --> mapquest_key : ", mapquest_key)
-                                    $window.alert("Pas de boutiques enregistrées à proximité de chez vous");
+                                    //console.log("pas de boutiques enregistrées à proximité de chez vous")
+                                    //console.log("MainController --> list_commerce : ", list_commerce)
+                                    //console.log("MainController --> mapquest_key : ", mapquest_key)
+                                    //$window.alert("Pas de boutiques enregistrées à proximité de chez vous");
                                     myBoutiques.getBoutiques([resultcoord.lat, resultcoord.lng], list_commerce, mapquest_key).then(function (boutique) {
                                         var boutiques = boutique.searchResults
                                         angular.forEach(boutiques, function (boutique) {
@@ -375,16 +375,6 @@ module.controller('MainController', [
                                             var boutique_id = boutique.resultNumber
                                             var latitude = coord[0];
                                             var longitude = coord[1];
-                                            
-                                            //console.log("adresse buyer : ", address)
-                                            //Customisation des Icons utiliser pour la map
-                                            //customIcon = L.mapquest.icons.marker({
-                                            //    primaryColor: '#22407F',
-                                            //    secondaryColor: '#3B5998',
-                                            //    shadow: true,
-                                            //    size: 'md'
-                                            //    symbol: 'A'
-                                            //});
     
                                             // Customisation de l'Icon pour les commerces déjà presents en base
                                             var customIcon = L.icon({
@@ -415,77 +405,120 @@ module.controller('MainController', [
                                     });
     
                                 } else {
-                            //Affichage de la liste des commerces récupérée sur la MAP
-                            //GetAllCommerce.query().then(function (boutiques) {
-                                //console.log("boutiques : ", boutiques)
-                                    angular.forEach(commerces, function(boutique, key) {
-                                        //console.log("boutique trouvée : ", boutique)
-                                        // boucle sur l'ensemble des commerces de l'utilisateur et affichage sur la map
-                                        for(var i=0; i<nb_commerce; i++) {
-                                            //boutique_place = [boutique[i].latitude, boutique[i].longitude]
-                                            //console.log("boutique test : ", boutique)
-                                                
-                                            var commentaire = "";
-                                            var boutique_place = " ";
-                                            var customIcon = "";
-                                            var boutique_id = boutique[i].id
-                                            var btnorder = 'btnorder'+boutique_id;
-    
-                                            $scope[btnorder] = function (id) {
-                                                //console.log("data return : ", id)
-                                                $uibModal.open({
-                                                    templateUrl: "<%= asset_path('Templates/myModalOrder.html.erb') %>", // loads the template
-                                                    controller: "modalOrder",
-                                                    backdrop: true, // setting backdrop allows us to close the modal window on clicking outside the modal window
-                                                    size: 'lg',
-                                                    resolve: {
-                                                        boutique: function () {
-                                                            return id; // Appel au controlleur modalOrder avec en entrée le nom du commerce
-                                                        },
-                                                        user: function () {
-                                                            return user; 
-                                                        }
-                                                    }
-                                                });
-    
-                                            };
-    
-                                            // Si le user est un acheteur
-                                            boutique_place = [boutique[i].latitude, boutique[i].longitude];
-    
-                                            // Customisation de l'Icon pour les commerces déjà presents en base
-                                            customIcon = L.icon({
-                                                iconUrl: 'https://upload.wikimedia.org/wikipedia/commons/7/74/Fruit_Stand_-_The_Noun_Project.svg',
-                                                iconSize: [35, 35], // size of the icon
-                                            });
-    
-                                            commentaire = "<div>Commerce adh&eacuterent.<br /> Pour Commandez vos produits <br /><button class='btn' ng-click='btnorder"+ boutique_id +"("+boutique_id+")'>Cliquez ici</button></div>";
-                                            // Compile title DOM into a link function
-                                            var linkFn = $compile(angular.element(commentaire));
+                                    var list_commerce = 15
+                                    myBoutiques.getBoutiques([resultcoord.lat, resultcoord.lng], list_commerce, mapquest_key).then(function (data) {
+                                        var boutiques = data.searchResults
+                                        angular.forEach(boutiques, function (data) {
+                                            //console.log("getBoutiques --> boutique : ", boutique)
+                                            var coord = data.shapePoints
+                                            //console.log("getBoutiques --> coord : ", coord)
+                                            var boutique_id = data.resultNumber
+                                            var latitude = coord[0];
+                                            var longitude = coord[1];
+                                            
+                                            myMarkers.getMarkers(data).then(function (markers) {
+                                                if (markers.dataReturned === false) {
+                                                    //console.log("MainController : ", data.name)
+                                                    // Customisation de l'Icon pour les commerces déjà presents en base
+                                                    var customIcon = L.icon({
+                                                        iconUrl: 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ2VarF6jyBEEqUI5d0ZK1NMm69I1rngTAM1KEQHvH_5CW73v-g',
+                                                        iconSize: [35, 35], // size of the icon
+                                                        });
+                                                    var commentaire = "<div><b ng-click='btnseller"+ boutique_id +"()'>"+data.name+"</b> is not yet register on Tchopmygrinds."+
+                                                                    "<br /> You can tell them to join the adventure below"+
+                                                                    "<br /><span class='glyphicon glyphicon-phone'> : "+data.fields.phone+"</span>"+
+                                                                    "<br /><span class='glyphicon glyphicon-envelope'> : </span></div>";
+                                                    // Compile title DOM into a link function
+                                                    var linkFn = $compile(angular.element(commentaire));
                                                     
-                                            // Return a jQuery DOM tree fully controlled by AngularJS so that ng directives will work
-                                            var popup = linkFn($scope);
+                                                    // Return a jQuery DOM tree fully controlled by AngularJS so that ng directives will work
+                                                    var popup = linkFn($scope);
+                                                    var customPopup = L.popup()
+                                                        .setLatLng([latitude, longitude])
+                                                        .setContent(popup[0])
+                                                        .openOn(map);
+            
+                                                    L.marker([latitude, longitude], {icon: customIcon}).bindPopup(customPopup).addTo(map);
+                                                } else {
+                                                    // Affichage des magasins présents en base
+                                                    angular.forEach(commerces, function(boutique) {
+                                                        //console.log("boutique trouvée : ", boutique)
+                                                        // boucle sur l'ensemble des commerces de l'utilisateur et affichage sur la map
+                                                        for(var i=0; i<nb_commerce; i++) {
+                                                            //boutique_place = [boutique[i].latitude, boutique[i].longitude]
+                                                            //console.log("boutique test : ", boutique)
+                                                                
+                                                            var commentaire = "";
+                                                            var boutique_place = " ";
+                                                            var customIcon = "";
+                                                            var boutique_id = boutique[i].id
+                                                            var btnorder = 'btnorder'+boutique_id;
+                    
+                                                            $scope[btnorder] = function (id) {
+                                                                //console.log("data return : ", id)
+                                                                $uibModal.open({
+                                                                    templateUrl: "<%= asset_path('Templates/myModalOrder.html.erb') %>", // loads the template
+                                                                    controller: "modalOrder",
+                                                                    backdrop: true, // setting backdrop allows us to close the modal window on clicking outside the modal window
+                                                                    size: 'lg',
+                                                                    resolve: {
+                                                                        boutique: function () {
+                                                                            return id; // Appel au controlleur modalOrder avec en entrée le nom du commerce
+                                                                        },
+                                                                        user: function () {
+                                                                            return user; 
+                                                                        }
+                                                                    }
+                                                                });
+                    
+                                                            };
+                    
+                                                            // Si le user est un acheteur
+                                                            boutique_place = [boutique[i].latitude, boutique[i].longitude];
+                    
+                                                            // Customisation de l'Icon pour les commerces déjà presents en base
+                                                            customIcon = L.icon({
+                                                                iconUrl: 'https://upload.wikimedia.org/wikipedia/commons/7/74/Fruit_Stand_-_The_Noun_Project.svg',
+                                                                iconSize: [35, 35], // size of the icon
+                                                            });
+                    
+                                                            commentaire = "<div>Commerce adh&eacuterent.<br /> Pour Commandez vos produits <br /><button class='btn' ng-click='btnorder"+ boutique_id +"("+boutique_id+")'>Cliquez ici</button></div>";
+                                                            // Compile title DOM into a link function
+                                                            var linkFn = $compile(angular.element(commentaire));
+                                                                    
+                                                            // Return a jQuery DOM tree fully controlled by AngularJS so that ng directives will work
+                                                            var popup = linkFn($scope);
+                    
+                                                            //console.log("coordonnées :", boutique_place )
+                                                            if (boutique_place !== " ") {
+                                                                var customPopup = L.popup()
+                                                                    .setLatLng(boutique_place)
+                                                                    .setContent(popup[0])
+                                                                    .openOn(map);
+                                                                //map.removeLayer(result);
+                                                                L.marker(boutique_place, {icon: customIcon}).bindPopup(customPopup).addTo(map);
+                                                            }
+                                                        }
+                                                    });
+                                                }
+                                            })
+                                        })
     
-                                            console.log("coordonnées :", boutique_place )
-                                            if (boutique_place !== " ") {
-                                                var customPopup = L.popup()
-                                                    .setLatLng(boutique_place)
-                                                    .setContent(popup[0])
-                                                    .openOn(map);
-                                                //map.removeLayer(result);
-                                                L.marker(boutique_place, {icon: customIcon}).bindPopup(customPopup).addTo(map);
-                                            }
-                                        }
+                                    }, function (error) {
+                                        // do something about the error
+                                        console.log("Error getBoutiques : ", error);
+                                        deferred.reject(error);
                                     });
+
                             //});
                                 }
                             })
                         })
-
-
                     }
                 }, function(error) {
                     // unauthenticated error
+                    console.log("MainController error : ", error)
+                    deferred.reject(error);
                 });
             }
         });
