190922 - update css file

--- a/app/assets/javascripts/Templates/main.html
+++ b/app/assets/javascripts/Templates/main.html
@@ -4,11 +4,13 @@
 </div>
 -->
 
-<div class="map">
+<div>
     <!--
+	<div class="map">
 	<leaflet id="map"></leaflet>
-	-->
 	<div id="map" style="width:98%; height:100%; margin-left: 50px"></div>
+	-->
+	<div id="map" class="map"></div>
 </div>
 
 
