--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,8 @@
   <div class="row site">
     <div class="col-md-1 general_menu startpage">
       <ul>
-        <li><a href="/" ng-click="MapOpen = !MapOpen" class="gradientmenu active"><i class="fa fa-home"></i></a></li>
-        <li><a href="/search" ng-click="SeeSearch = !SeeSearch" class="gradientmenu"><i class="fa fa-sliders"></i></a></li>
+        <li><a href="/" ng-click="MapOpen = !MapOpen" class="active"><i class="fa fa-home"></i></a></li>
+        <li><a href="/search" ng-click="SeeSearch = !SeeSearch"><i class="fa fa-sliders"></i></a></li>
         <!--
         <li><a href="/" ng-click="MapOpen = !MapOpen" class="gradientmenu active"><i class="fa fa-home"></i></a></li>
         <li><%= link_to " ", root_path, :class => "fa fa-home", aria: {hidden: true}%></li> 
@@ -11,7 +11,7 @@
         <li><%= link_to " ", aide_path, :class => "fa fa-info", aria: {hidden: true} %></li>
         <li><%= link_to " ", contact_path, :class => "fa fa-envelope-o", aria: {hidden: true} %></li>
         -->
-      </ul>
+      </ul>
     </div>
   </div>
 </header>
