--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html ng-app="marketApp">
+<html lang="en" ng-app="marketApp">
   <head>
     <title><%= full_title(yield(:title)) %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+          content="Tchopmygrinds is first and foremost a new way of approaching the exchange of products in the city. 
+                   With our services, consuming quality products near you becomes easy.">
     <%= stylesheet_link_tag    "https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css" %>
     <%= stylesheet_link_tag    "https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css" %>
     <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => "reload"  %>
     <%= javascript_include_tag 'application', "data-turbolinks-track" => "reload" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" %>
     <%= javascript_include_tag "https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.js" %>
-    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.0/angular.min.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.js" %>
+    <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.js" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-moment/1.3.0/angular-moment.min.js" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.17/angular-filter.min.js" %>
