--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -122,7 +122,7 @@
              <!--Map open (for adaptive)-->
         <div class="row map_open">
             <div class="col-md-12">
-                <a href="/" id="map_open">Open map</a>
+                <a href="/" id="map_open" ng-click="MapOpen = !MapOpen">Open map</a>
             </div>
         </div>
           <!--/Map open (for adaptive)-->
