--- a/app/assets/javascripts/Templates/myModalRegistration.html
+++ b/app/assets/javascripts/Templates/myModalRegistration.html
@@ -12,7 +12,7 @@
 <div class="modal-body" id="modal-body">
   <form name="outerForm" class="tab-form-demo">
     <uib-tabset active="activeJustified" justified="true">
-        <uib-tab index="1" heading="Sign In">
+        <uib-tab index="1" heading="Sign In" ng-if="checkboxModel.value1 == false">
           </br>
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
@@ -22,9 +22,25 @@
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" ng-model="credentials.password">
+              <small id="emailHelp" class="form-text text-muted">Click on checkbox if you forget your password
+                <input type="checkbox" ng-model="checkboxModel.value1"><br/>
+              </small>
             </div>
             <button class="btn btn-lg btn-primary btn-block" ng-click="signIn()">Sign In</button>
         </uib-tab>
+        <uib-tab index="1" heading="Reset password" ng-if="checkboxModel.value1 == true">
+          </br>
+          <div class="form-group">
+            <label for="InputNewpassword">New Password</label>
+            <input type="password" class="form-control" id="InputNewpassword" placeholder="Password" autocomplete="off" autofocus="true" required="required" ng-model="passwordEditForm.password">
+          </div>
+          <div class="form-group">
+            <label for="InputConfirmPassword">New Password confirmation</label>
+            <input type="password" class="form-control" id="InputConfirmPassword" placeholder="Password" autocomplete="off" autofocus="true" required="required" ng-model="passwordEditForm.password_confirmation">
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" ng-click="resetpassword(passwordEditForm)">Reset password</button>
+        </uib-tab>
+        
         <uib-tab index="2" heading="Sign Up">
           </br>
             <h3>Apply as a <strong>{{data.userSelect.name}}</strong></h3>
