add user profil

--- a/app/assets/javascripts/Templates/header.html.erb
+++ b/app/assets/javascripts/Templates/header.html.erb
@@ -105,6 +105,57 @@
         </div>
         <!--/Products sales graph-->
 
+        <!--seller dashbord--->
+        <div class="row">
+            <div class="text-center">
+                <div class="col-lg-3 col-sm-6">
+                    <div class="panel mini-box">
+                        <span class="btn-icon btn-icon-round btn-icon-lg-alt bg-success">
+                            <span class="fa fa-rocket"></span>
+                        </span>
+                        <div class="box-info">
+                            <p class="size-h2">36 <span class="size-h4">%</span></p>
+                            <p class="text-muted"><span data-translate="GROWTH">Growth</span></p>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-lg-3 col-sm-6">
+                    <div class="panel mini-box">
+                        <span class="btn-icon btn-icon-round btn-icon-lg-alt bg-info">
+                            <span class="fa fa-users"></span>
+                        </span>
+                        <div class="box-info">
+                            <p class="size-h2">8</p>
+                            <p class="text-muted"><span>New Users</span></p>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-lg-3 col-sm-6">
+                    <div class="panel mini-box">
+                        <span class="btn-icon btn-icon-round btn-icon-lg-alt bg-warning">
+                            <span class="fa fa-dollar"></span>
+                        </span>
+                        <div class="box-info">
+                            <p class="size-h2">18 <span class="size-h4">k</span></p>
+                            <p class="text-muted"><span>Profit</span></p>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-lg-3 col-sm-6">
+                    <div class="panel mini-box">
+                        <span class="btn-icon btn-icon-round btn-icon-lg-alt bg-danger">
+                            <span class="fa fa-shopping-cart"></span>
+                        </span>
+                        <div class="box-info">
+                            <p class="size-h2">55 <span class="size-h4">k</span></p>
+                            <p class="text-muted"><span>Sales</span></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--/seller dashbord-->
+
     </div>
     <!--/Profile-->
 
