--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -940,3 +940,98 @@ h5.cat {
 trix-toolbar {
   white-space: normal;
 }
+
+@media (min-width: 1200px) {
+  .col-lg-3 {
+      width: 25%;
+  }
+}
+
+@media (min-width: 768px){
+  .col-sm-6 {
+      width: 50%;
+  }
+}
+
+.text-center {
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.mini-box {
+  min-height: 120px;
+  padding: 25px;
+}
+
+.panel {
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 1px solid transparent;
+  border-radius: 2px;
+  /*box-shadow: 0 0 3px rgb(0 0 0 / 10%);*/
+  box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
+}
+
+.mini-box .box-info {
+  display: inline-block;
+  vertical-align: top;
+  box-sizing: border-box;
+}
+
+.mini-box .btn-icon, .mini-box .btn-icon-lined {
+  margin: 0 15px 0 0;
+  font-size: 32px;
+}
+
+.btn-icon-lg-alt {
+  height: 70px;
+  width: 70px;
+  line-height: 70px;
+}
+
+.btn-icon-round {
+  border-radius: 50%;
+}
+
+.btn-icon {
+  display: inline-block;
+  text-align: center;
+}
+
+.bg-success {
+  background-color: #23AE89;
+  box-sizing: border-box;
+  color: #fff;
+}
+
+.mini-box .box-info p {
+  margin: 0;
+}
+
+.size-h2 {
+  font-size: 30px;
+}
+
+.size-h4 {
+  font-size: 18px;
+  box-sizing: border-box;
+}
+
+.text-muted {
+  color: #777;
+}
+
+.bg-info {
+  background-color: #2EC1CC;
+  color: #fff;
+}
+
+.bg-warning {
+  background-color: #FFB61C;
+  color: #fff;
+}
+
+.bg-danger {
+  background-color: #E94B3B;
+  color: #fff;
+}
