--- a/app/assets/stylesheets/profile.css.scss
+++ b/app/assets/stylesheets/profile.css.scss
@@ -79,7 +79,7 @@ body {
     }
 }
 
-.widget-top-overflow>.btn-toolbar {
+.widget-top-overflow .btn-toolbar {
     position: absolute;
     top: 0;
     right: 0;
@@ -87,10 +87,25 @@ body {
     margin-right: 20px;
 }
 
+@media (min-width: 992px) {
+    .post-user-profile .contacts>li {
+        width: 150px;
+        white-space: nowrap;
+    }
+}
+
 .btn-toolbar {
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: -5px;
+    box-sizing: border-box;
+}
+
+@media (min-width: 768px) {
+    .widget-top-overflow>.btn-toolbar {
+        top: auto;
+        bottom: 0;
+    }
 }
 
 .btn {
@@ -138,4 +153,210 @@ body {
 .fw-semi-bold {
     font-weight: 600;
     box-sizing: border-box;
+}
+
+.post-user-profile .contacts .fa {
+    font-size: 18px;
+    vertical-align: middle;
+}
+
+.mr-xs {
+    margin-right: 5px;
+}
+
+.mr-sm {
+    margin-right: 10px;
+}
+
+.fa-fw {
+    width: 1.2857142857em;
+    text-align: center;
+}
+
+.post-user-profile .contacts {
+    display: block;
+    margin-top: 25px;
+    margin-left: -10px;
+    margin-right: -10px;
+    padding-left: 0;
+    text-align: center;
+}
+
+.post-user-profile .contacts>li {
+    display: inline-block;
+    line-height: 2.2;
+    list-style: none;
+    text-align: left;
+    margin: 0 10px;
+}
+
+.mt, .mt-n, .mt-md {
+    margin-top: 20px;
+    box-sizing: border-box;
+}
+
+.stats-row {
+    margin-bottom: 15px;
+    box-sizing: border-box;
+}
+
+.stats-row-profile .stat-item:first-child {
+    padding-left: 0;
+}
+
+@media (min-width: 992px) {
+    .stats-row-profile .stat-item {
+        padding-right: 0;
+    }
+}
+
+.stats-row-profile .stat-item {
+    border-left: 0;
+    padding-left: 15px;
+    text-align: center;
+}
+
+.stat-item {
+    display: inline-block;
+    padding-right: 15px;
+}
+
+.stats-row-profile .stat-item .value {
+    font-size: 28px;
+    font-weight: 300;
+}
+
+.stat-item .value {
+    font-weight: 700;
+}
+
+.stat-item .name {
+    margin-bottom: 2px;
+}
+
+.mt-lg {
+    margin-top: 30px;
+}
+
+@media (min-width: 768px) {
+    .lead {
+        font-size: 21px;
+    }
+}
+
+.lead {
+    margin-bottom: 20px;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.4;
+}
+
+.activities {
+    margin-top: -20px;
+}
+
+.activities h2 {
+    margin-left: 20px;
+}
+
+.activities .event {
+    margin-top: 20px;
+    width: 100%;
+    box-shadow: 0 0 10px #e8e8e8;
+}
+
+.fs-mini {
+    font-size: 13px;
+}
+
+.event-heading {
+    margin: 0 0 2px;
+    font-weight: 600;
+}
+
+.event {
+    background: #fff;
+    border-radius: 4px;
+    padding: 20px 20px 0;
+    position: relative;
+    box-shadow: 0 0 10px #e8e8e8;
+}
+
+.event>footer {
+    margin: 20px -20px 0;
+    padding: 10px 20px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    background-color: #fafafa;
+}
+
+.event>footer .thumb {
+    margin-left: 10px;
+}
+
+.event .post-comments {
+    margin-left: -20px;
+    margin-right: -20px;
+}
+
+.mt-sm {
+    margin-top: 10px;
+}
+
+.post-comments {
+    font-size: 12px;
+    padding-left: 0;
+}
+
+.event>footer .thumb {
+    margin-left: 10px;
+}
+
+.thumb-xs, .thumb-sm, .thumb-lg, .thumb-xlg, .thumb {
+    position: relative;
+    display: inline-block;
+    text-align: center;
+}
+
+.thumb-xs {
+    width: 28px;
+}
+
+.thumb-sm {
+    width: 34px;
+}
+
+.post-links {
+    margin-bottom: 0;
+    font-size: 12px;
+    padding-left: 0;
+}
+
+.post-links>li {
+    float: left;
+    list-style: none;
+}
+
+.post-links>li>a {
+    text-decoration: none;
+    color: #999;
+}
+
+a {
+    cursor: pointer;
+    transition: background-color .15s ease-in-out,border-color .15s ease-in-out,color .15s ease-in-out;
+}
+
+.post-comments>li {
+    padding: 10px;
+    border-top: 1px solid #e7e7e7;
+    list-style: none;
+}
+
+.post-comments .avatar {
+    margin-top: 1px;
+}
+
+.post-comments .comment-body {
+    overflow: auto;
 }
