--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,8 @@
     
     <%= stylesheet_link_tag    'application', media: 'all', "data-turbolinks-track" => "reload"  %>
     <%= javascript_include_tag 'application', "data-turbolinks-track" => "reload" %>
-    <!-- TailwindCSS (CDN) with preflight disabled to avoid conflicts -->
-    <script>
-      window.tailwind = window.tailwind || {};
-      window.tailwind.config = {
-        darkMode: 'media'
-      };
-    </script>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Tailwind: chargé via pipeline d'assets (voir app/assets/stylesheets/tailwind.css) -->
+    <%= stylesheet_link_tag 'builds/tailwind', media: 'all' %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.js" %>
     <%= javascript_include_tag "https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js" %>
     <%= javascript_include_tag "https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.js" %>
